--- a/lesson/index.html
+++ b/lesson/index.html
@@ -7,84 +7,5 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="section">
-		<div class="container">
-			<!-- Первый row с заголовком -->
-			<div class="row">
-				<div class="col-lg-6 offset-3">
-				<h1 class="header text-center">
-					<span> Получить видео-инструкцию </span>
-					<strong class="text-uppercase">Как заработать первый миллион </strong>
-				</h1>
-			    </div>
-			</div>
-			<!-- Второй row с видео и форму -->
-			<div class="fs row">
-				<div class="col-lg-6 offset-1">
-					<div class="video">
-						<iframe width="100%" height="315" src="https://www.youtube.com/embed/zV00AEbaeSo?si=f22jRUZTYuPCtg2i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-						
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div class="form">
-						<form action="#">
-							<div class="vssdf">
-								<div class="sigma">
-							<p class="texp text-header text-center"> Введите ваш email </p>
-                            <input type="text" class="form-control" placeholder="Ваше имя">
-                            <input type="text" class="form-control" placeholder="Ваш email">
-                            <button class=" btn btn-primary btn-lg btn-block">Получить инструкцию</button>
-                        </div>
-                            </div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Второй section -->
-	<div class="section">
-		<div class="container">
-		<!-- row под заголовк секции -->
-		<div class="row">
-			<div class="col-lg-12">
-				<h1 class="header2 text-center"><strong class="text-uppercase">Почему нужно сделать это сейчас?</strong></h1>
-			</div>
-		</div>
-		<!-- row под преимущества -->
-		<div class="fitures">
-		<div class="row text-center">
-			<div class="col-lg-3">
-				<div class="futurs">
-					<img src="img/01.png" alt="imp">
-					<p>Первое  преимущество</p>
-				</div>
-			</div>
-				<div class="col-lg-3">
-					<div class="futurs">
-					<img src="img/02.png" alt="imp">
-					<P>Второе преимущество</P>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="futurs">
-					<img src="img/03.png" alt="imp">
-					<P>Третье преимущество</P>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				 <div class="futurs">
-					<img src="img/04.png" alt="imp">
-					<P>Четвертое преимущество</P>
-				</div>
-			</div>
-				</div>
-			</div>
-			<!-- кнопка -->
-			<div class="btnwx">
-			<button class=" btn btn-primary btn-lg ">Получить инструкцию</button>
-</div>
-			</div>
-		</div>
-	</div>
+<h1>Привет вот твой код:CRDDQD2WRZYAFBR2N7HU</h1>
+</body>
